--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -191,6 +191,19 @@
   letter-spacing: -0.02em;
 }
 
+.renderPrompt {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.renderTitle {
+  font-size: 26px;
+  font-weight: 1000;
+}
+
 .expr {
   font-size: 72px;
 }
